# masterproef_automationTool

./: .gitignore  pyproject.toml
combined/: DownloadList_CU7000_B2_FREEZE.xlsm  config.json  config_V3.json  error_log.txt  filebrowse_test.py  new_config.json  new_config_V2.json  result.xlsx  tool.py
interfacelijsten/interfacelijsten ingevuld (meerdere VU's)/: AlarmList_CU7002_B7_FREEZE.xlsm  DownloadList_CU7002_B7_FREEZE.xlsm  UploadList_CU7002_A6_FREEZE.xlsm  Visualisation&Commands_CU7002_C1_FREEZE.xlsm
interfacelijsten/interfacelijsten templates/: DownloadList_CUxxxx_B4_PREL.xlsm  UploadList_CUxxxx_A8_PREL.xlsm  Visualisation&Commands_CUxxxx_B7_PREL.xlsm
oop_tutorial/: geeksforgeeks.py  realpython.py
openpyxl/: format_export_excel.py  format_test.py  format_test.xlsx  testfile.xlsx
openpyxl/test_implementation/: code.py  voorbeeld_alarmlijst.xlsx
segments/: GUI_treeview.py  format_export_excel.py  format_test.xlsx  format_test_outputted.xlsx  pyqt_tableview.py  pyqt_tableview_config.json  pyqt_tableview_result.xlsx
segments/find column names/: AlarmList_CU7000_B5_FREEZE.xlsx  UploadList_CU7000_A5_FREEZE.xlsm  Visualisation&Commands_CU7000_CU7100_B4_FREEZE.xlsm  test.py
segments/old/: format_test.py  format_test.xlsx
warming-ups/oop_tutorial/: datacamp.py
warming-ups/openpyxl/: test0_documentation.py  test1_chatgpt.py  updated_testfile.xlsx
xlwings/: GUI_treeview.py  baby_GUI.py  dataframe_control.py  error_log.txt  first_implemented_tests.py  format.xlsx  formattest.py  voorbeeld.xlsx
xlwings/small_tests/: data_import_test.py  format_test.py  (+2 more)
(+7 files in other folders)
